# quest_game

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pages.yml
app/: runner.py  runner_config.py  runner_resume.py  server.py
app/api/: quest.py
app/calibration/: __init__.py  __main__.py  arc_scorer.py  harness.py  heuristics.py  judges.py  loader.py  pairwise_scorer.py  recursive_summary.py  report.py  scorer.py
app/cli/: play.py
app/craft/: __init__.py  arc.py  library.py  schemas.py
app/engine/: __init__.py  check.py  context_builder.py  context_spec.py  diagnostics.py  extract.py  inference_params.py  pipeline.py  prompt_renderer.py  stages.py  token_budget.py  trace.py  trace_store.py  typed_edits.py
app/experiments/: voter_rollout.py
app/optimization/: __init__.py  curator.py  optimizer.py
app/planning/: __init__.py  arc_planner.py  arc_skeleton_planner.py  craft_planner.py  critics.py  dramatic_planner.py  emotional_planner.py  entity_consistency_critic.py  foreshadow_pool.py  information_asymmetry.py  metaphor.py  metaphor_critic.py  motives.py  opening_critic.py  perception.py  reader_model.py  schemas.py  voice.py  (+3 more)
docs/: _config.yml  calibration-arc.md  calibration.md  day10-stress-test.md  day11-bottleneck-fix.md  day12-verification.md  day13-fixes.md  day5-writer-lora-v1.md  index.md  pale-lights-analysis.md  pale-lights-seed-comparison.md  phase1-story-candidates-result.md  phase1-summary.md  phase2-arc-skeleton-result.md  phase2-kickoff-lora-v2.md  phase3-lora-v3-kickoff.md  phase3-rollout-harness-result.md  phase4-kb-scoring-result.md  phase5-refinement-result.md  retrieval-eval.md  roadmap-3mo.md  runner.md  scoring-redesign.md  status-2026-04-14.md  technical-report-2026-04-15-16.md  technical-report-2026-04-18.md  vllm-bench-2026-04-14.md  wakeup-note.md  writer-finetune-plan.md
evals/: dataset.json  edit_pass_config.yaml  edit_pass_dataset.json  edit_pass_provider.py  edit_results.json  promptfooconfig.yaml  provider.py  results.json
seeds/: pale_lights.json
tools/: ab_writer_lora.py  ab_writer_lora_local.py  ab_writer_lora_multi.py  analyze_stress.py  annotate_chapter.py  build_corpus.py  calibrate_day6.py  calibrate_day6_dryrun.py  judge_chapters.py  length_ab.py  overnight_rollout.sh  quest_run.py  rerank_ab.py  rollup_annotations.py  rollup_judge_scores.py  sample_passages.py  sample_scenes.py  score_chapters.py  story_gen.py  strategy_sweep.py  stress_personas.py  stress_test_5.py  stress_test_50.py  verify_runner_parity.py
web/: app.js  index.html  style.css
(+405 files in other folders)
