[project]
name = "quest-game"
version = "0.1.0"
description = "Locally-hosted AI-generated forum-style quest game"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: runs against a real llama-server + real model (slow, opt-in)",
]
addopts = "-m 'not integration'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
